--- a/templates/personas/index.html
+++ b/templates/personas/index.html
@@ -21,8 +21,8 @@
         <td>{{ item['nombre'] }}</td>
         <td>{{ item['telefono'] }}</td>
         <td>{{ item['fecha_nac'] }}</td>
-        <td><a href="#" class="btn btn-warning">Editar</a></td>
-        <td><a href="#" class="btn btn-danger">Eliminar</a></td>
+        <td><a href="/personas/edit/{{ item['id']}}" class="btn btn-warning">Editar</a></td>
+        <td><a href="/personas/delete/{{ item['id']}}" onclick="return(confirm('esta seguro ???'))" class="btn btn-danger">Eliminar</a></td>
       </tr>
     {% endfor %}
     </tbody>
